--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,8 @@ jobs:
       - name: mamba setup
         if: matrix.install-method == 'mamba'
         uses: mamba-org/setup-micromamba@v1
+        with:
+          environment-file: environment.yml
 
       - name: Python setup
         if: matrix.install-method == 'pip'
