--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,7 @@ jobs:
         uses: mamba-org/setup-micromamba@v1
         with:
           environment-file: environment.yml
+          cache-downloads: true
 
       - name: Python setup
         if: matrix.install-method == 'pip'
@@ -61,9 +62,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python --version
+          python --version | grep "Python ${PYTHON_VERSION}"
           pip install pytest-cov restructuredtext-lint pytest-xdist 'coverage!=6.3.0'
-          pip install .[all]
+          pip install -e .[all]
           pip freeze
 
       - name: List installed package versions (conda)
