--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,3 +13,5 @@ repos:
     hooks:
       - id: flake8
         args: [--max-line-length=88, "--extend-ignore=E203"]
+        additional_dependencies:
+          - importlib-metadata<5.0
