--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,3 +15,4 @@ repos:
         args: [--max-line-length=88, "--extend-ignore=E203"]
         additional_dependencies:
           - importlib-metadata<5.0
+        exclude: ^radionets/dl_framework/architecture.py
