Use gpu version of pytorch, add nvidia channel, add pytorch-cuda, torchvision

--- a/environment.yml
+++ b/environment.yml
@@ -5,14 +5,17 @@ channels:
     - pytorch
     - defaults
     - conda-forge
+    - nvidia
 dependencies:
   - python
-  - pytorch
+  - pytorch-gpu
+  - pytorch-cuda=12.1
+  - torchvision
   - cudatoolkit
   - cartopy
   - numpy
   - numba
+  - towncrier
   - pip
   - pip:
-    - towncrier
     - -e .
