--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -1,13 +1,16 @@
 ---
-name: radionets
+name: radionets-dev
 channels:
     - fastai
     - pytorch
     - defaults
     - conda-forge
+    - nvidia
 dependencies:
   - python
-  - pytorch
+  - pytorch-gpu
+  - pytorch-cuda=12.1
+  - torchvision
   - cudatoolkit
   - cartopy
   - numpy
