Update pyproject.toml, urls

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,6 @@ maintainers = [
   { name = "Felix Geyer", email = "felix.geyer@tu-dortmund.de" },
 ]
 license = { text = "MIT" }
-url = "https://github.com/radionets-project/radionets"
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Science/Research",
@@ -53,6 +52,9 @@ dependencies = [
     "pre-commit",
 ]
 
+[project.urls]
+repository = "https://github.com/radionets-project/radionets"
+
 [project.optional-dependencies]
 tests = ["pytest >= 7.0", "pytest-cov", "pytest-order"]
 
@@ -65,37 +67,37 @@ radionets_evaluation = "radionets.evaluation.scripts.start_evaluation:main"
 addopts = "--verbose"
 
 [tool.towncrier]
-package = "radionets"
-directory = "docs/changes"
-filename = "CHANGES.rst"
-template = "docs/changes/template.rst"
-# let towncrier create proper links to the merged PR
-issue_format = "`#{issue} <https://github.com/radionets-project/radionets/pull/{issue}>`__"
+    package = "radionets"
+    directory = "docs/changes"
+    filename = "CHANGES.rst"
+    template = "docs/changes/template.rst"
+    # let towncrier create proper links to the merged PR
+    issue_format = "`#{issue} <https://github.com/radionets-project/radionets/pull/{issue}>`__"
 
-[tool.towncrier.fragment.feature]
-name = "New Features"
-showcontent = true
+    [tool.towncrier.fragment.feature]
+        name = "New Features"
+        showcontent = true
 
-[tool.towncrier.fragment.bugfix]
-name = "Bug Fixes"
-showcontent = true
+    [tool.towncrier.fragment.bugfix]
+        name = "Bug Fixes"
+        showcontent = true
 
-[tool.towncrier.fragment.api]
-name = "API Changes"
-showcontent = true
+    [tool.towncrier.fragment.api]
+        name = "API Changes"
+        showcontent = true
 
-[tool.towncrier.fragment.datamodel]
-name = "Data Model Changes"
-showcontent = true
+    [tool.towncrier.fragment.datamodel]
+        name = "Data Model Changes"
+        showcontent = true
 
-[tool.towncrier.fragment.optimization]
-name = "Refactoring and Optimization"
-showcontent = true
+    [tool.towncrier.fragment.optimization]
+        name = "Refactoring and Optimization"
+        showcontent = true
 
-[tool.towncrier.fragment.maintenance]
-name = "Maintenance"
-showcontent = true
+    [tool.towncrier.fragment.maintenance]
+        name = "Maintenance"
+        showcontent = true
 
-[[tool.towncrier.section]]
-name = ""
-path = ""
+    [[tool.towncrier.section]]
+        name = ""
+        path = ""
