--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,9 +22,8 @@ classifiers = [
     "Natural Language :: English",
     "Operating System :: OS Independent",
     "Programming Language :: Python",
-    "Programming Language :: Python :: 3.6",
-    "Programming Language :: Python :: 3.7",
-    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3 :: Only",
     "Topic :: Scientific/Engineering :: Astronomy",
     "Topic :: Scientific/Engineering :: Physics",
@@ -38,7 +37,7 @@ dependencies = [
     "fastai",
     "kornia",
     "pytorch-msssim",
-    "numpy",
+    "numpy<=2.0",
     "astropy",
     "tqdm",
     "click",
