Update arch name in test/training.toml

--- a/tests/training.toml
+++ b/tests/training.toml
@@ -22,7 +22,7 @@ fourier = true
 amp_phase = true
 normalize = "none"
 source_list = false
-arch_name = "SRResNet"
+arch_name = "SRResNet_18"
 loss_func = "splitted_L1"
 num_epochs = 2
 inspection = false
